fixed device forwarding

--- a/experiments/fig14.ipynb
+++ b/experiments/fig14.ipynb
@@ -121,10 +121,10 @@
    "source": [
     "similarity_fn = similarity.cos_similarity\n",
     "similarities_cos, target_feats = utils.get_similarity_from_activations(target_save_name, clip_save_name, \n",
-    "                                                             text_save_name, similarity.cos_similarity)\n",
+    "                                                             text_save_name, similarity.cos_similarity, device=device)\n",
     "\n",
     "similarities_soft_wpmi, target_feats = utils.get_similarity_from_activations(target_save_name, clip_save_name, \n",
-    "                                                             text_save_name, similarity.soft_wpmi)"
+    "                                                             text_save_name, similarity.soft_wpmi, device=device)"
    ]
   },
   {
@@ -207,7 +207,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_1_10",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
