--- a/experiments/table1.ipynb
+++ b/experiments/table1.ipynb
@@ -116,7 +116,7 @@
     "    target_save_name, clip_save_name, text_save_name = save_names\n",
     "\n",
     "    similarities, target_feats = utils.get_similarity_from_activations(target_save_name, clip_save_name, \n",
-    "                                                        text_save_name, similarity_fn)\n",
+    "                                                        text_save_name, similarity_fn, device=device)\n",
     "\n",
     "    clip_preds = torch.argmax(similarities, dim=1)\n",
     "    clip_preds = [words[int(pred)] for pred in clip_preds]\n",
@@ -163,14 +163,6 @@
     "clip_cos, mpnet_cos = utils.get_cos_similarity(milan_preds, imagenet_classnames, clip_model, model, device, batch_size)\n",
     "print(\"MILAN - Clip similarity: {:.4f}, mpnet similarity: {:.4f}\".format(clip_cos, mpnet_cos))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "314b1e83-93fb-4617-9a2a-55d6d2c95f3a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
