--- a/experiments/table2.ipynb
+++ b/experiments/table2.ipynb
@@ -108,7 +108,7 @@
     "target_save_name, clip_save_name, text_save_name = save_names\n",
     "\n",
     "similarities, target_feats = utils.get_similarity_from_activations(target_save_name, clip_save_name, \n",
-    "                                                        text_save_name, similarity_fn)\n",
+    "                                                        text_save_name, similarity_fn, device=device)\n",
     "\n",
     "with open(concept_set, 'r') as f: \n",
     "    words = (f.read()).split('\\n')"
