--- a/experiments/table3.ipynb
+++ b/experiments/table3.ipynb
@@ -363,7 +363,8 @@
     "\n",
     "        similarities, target_feats = utils.get_similarity_from_activations(target_save_name, clip_save_name, \n",
     "                                                                           text_save_name, \n",
-    "                                                                           eval(\"similarity.{}\".format(similarity_fn)))\n",
+    "                                                                           eval(\"similarity.{}\".format(similarity_fn)),\n",
+    "                                                                           device=device)\n",
     "\n",
     "        clip_preds = torch.argmax(similarities, dim=1)\n",
     "        clip_preds = [words[int(pred)] for pred in clip_preds]\n",
@@ -735,7 +736,8 @@
     "\n",
     "        similarities, target_feats = utils.get_similarity_from_activations(target_save_name, clip_save_name, \n",
     "                                                                           text_save_name, \n",
-    "                                                                           eval(\"similarity.{}\".format(similarity_fn)))\n",
+    "                                                                           eval(\"similarity.{}\".format(similarity_fn)),\n",
+    "                                                                           device=device)\n",
     "        \n",
     "        print(\"Similarity fn: {}, D_probe: {}\".format(similarity_fn, d_probe))\n",
     "        print(\"Top 1 acc: {:.2f}%, Top 5 acc: {:.2f}%\".format(get_topk_acc(similarities, k=1),\n",
