--- a/experiments/fig10.ipynb
+++ b/experiments/fig10.ipynb
@@ -201,7 +201,7 @@
     "\n",
     "for id_of_interest in ids_of_interest:\n",
     "    similarities, target_feats = utils.get_similarity_from_activations(target_save_name, clip_save_name, \n",
-    "                                                                       text_save_name, similarity_fn)\n",
+    "                                                                       text_save_name, similarity_fn, device=device)\n",
     "    target_feats = target_feats.cpu()\n",
     "    vals, ids = torch.topk(similarities[id_of_interest], k=5, largest=True)\n",
     "    orig_words = [words[int(ids[i])] for i in range(len(vals))]\n",
@@ -264,7 +264,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_1_10",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -278,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
