--- a/experiments/fig4.ipynb
+++ b/experiments/fig4.ipynb
@@ -117,7 +117,7 @@
     "target_save_name, clip_save_name, text_save_name = save_names\n",
     "\n",
     "similarities, target_feats = utils.get_similarity_from_activations(target_save_name, clip_save_name, \n",
-    "                                                             text_save_name, similarity_fn)\n",
+    "                                                             text_save_name, similarity_fn, device=device)\n",
     "\n",
     "with open(concept_set, 'r') as f: \n",
     "    words = (f.read()).split('\\n')\n",
@@ -223,7 +223,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_1_10",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -237,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
