--- a/experiments/fig5.ipynb
+++ b/experiments/fig5.ipynb
@@ -118,7 +118,7 @@
    "source": [
     "target_model, _ = data_utils.get_target_model(target_name, device)\n",
     "similarities, target_feats = utils.get_similarity_from_activations(target_save_name, clip_save_name, \n",
-    "                                                                       text_save_name, similarity_fn)\n",
+    "                                                                       text_save_name, similarity_fn, device=device)\n",
     "top_vals, top_ids = torch.topk(target_feats, k=5, dim=0)"
    ]
   },
@@ -788,7 +788,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_1_10",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -802,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
